--- a/index.html
+++ b/index.html
@@ -25,8 +25,30 @@
                 </ul>
 
             </nav>
+            <div class="nav-responsive">
+                <i class="fa-solid fa-bars"></i>
+
+            </div>
         </header>
     </div>
+    <section id="inicio" class="inicio">
+        <div class="contenedor-banner">
+            <div class="contenedor-img">
+                <img src="imagenes/fotoperfil.png" alt="">
+
+            </div>
+            <h1>PEDRO PEREZ</h1>
+            <h2>Contador Publico</h2>
+            <div class="redes">
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+        </div>
+
+    </section>
+
+    
 
     
 </body>
