-:Terminado del Trabajo Final

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="contenedor-header">
         <header>
             <div class="logo">
-                <a href="#">CV</a>
+                <a href="#"></a>
             </div>
             <nav id="nav">
                 <ul>
@@ -25,7 +25,7 @@
                 </ul>
 
             </nav>
-            <div class="nav-responsive">
+            <div class="nav-responsive" onclick="mostrarOcultarMenu()">
                 <i class="fa-solid fa-bars"></i>
 
             </div>
@@ -52,7 +52,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mi</h2>
-            <p><span>Hola, soy Nick Perez.</span> Soy estudiante de Economía y poseo excelentes habilidades de análisis, planificación y trabajo en equipo que he adquirido durante mis estudios universitarios, las prácticas en el sector logístico y algunos trabajos a tiempo parcial en el sector de hostelería y comercio.
+            <p>Hola, soy Pedro Perez, Contador Público y poseo excelentes habilidades de análisis, planificación y trabajo en equipo que he adquirido durante mis estudios universitarios, las prácticas en el sector logístico y algunos trabajos a tiempo parcial en el sector de hostelería y comercio.
             </p>
         <div class="fila">
             <!--datos personales-->
@@ -64,20 +64,20 @@
                         15-01-1980
                     </li>
                     <li>
-                        <strong>Telefono</strong>
-                        261-5178762
+                        <strong>Télefono:</strong>
+                        261-51787962
                     </li>
                     <li>
-                        <strong>Email</strong>
-                        www.example.com
+                        <strong>Email:</strong>
+                        pedro.perez@gmail.com
                     </li>
                     <li>
-                        <strong>Direccion</strong>
-                        123 Mendoza, Argentina
+                        <strong>Dirección:</strong>
+                        Padre Vera 56, Maipú, Mendoza
                     </li>
                     <li>
-                        <strong>Cargo</strong>
-                        <span>FREELANCE</span>
+                        <strong>Cargo:</strong>
+                        <span>Contador</span>
                     </li>
                 </ul>
 
@@ -93,7 +93,7 @@
                     </div>
                     <div class="intereses">
                         <i class="fa-solid fa-headphones"></i>
-                        <span>MUSICA</span>
+                        <span>MúSICA</span>
                     </div>
                     <div class="intereses">
                         <i class="fa-brands fa-apple"></i>
@@ -121,6 +121,184 @@
 
     </div>
     </section>
+    <!--Seccion Habilidades-->
+    <section class="habilidades" id="habilidades">
+        <div class="contenido-seccion">
+            <h2>Habilidades</h2>
+            <div class="fila">
+                <!--Habilidades-->
+                <div class="col">
+                    <h3>Habilidades Profesionales</h3>
+                    <div class="habilidad">
+                        <span>Comunicación</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>75%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="habilidad">
+                        <span>Trabajo en Equipo</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>85%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="habilidad">
+                        <span>Creatividad</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>65%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="habilidad">
+                        <span>Dedicación</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>86%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="habilidad">
+                        <span>Proyecto</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>95%</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+    <!--Seccion Cv-->
+    <section id="curriculum" class="curriculum">
+        <div class="contenio-seccion">
+            <h2>Curriculum</h2>
+            <div class="fila">
+                <div class="col izquierda">
+                    <h3>Educación</h3>
+                    <div class="item izq">
+                        <h4>Estudios Secundario</h4>
+                        <span class="casa">Instituto Padre Vazquez</span>
+                        <span class="fecha">2005-2009</span>
+                        <p>Título: Gestion y Organización de las Instituciones</p>
+                        <div class="conectori">
+                            <div class="circuloi"></div>
+                        </div>
+                    </div>
+                    <div class="item izq">
+                        <h4>Estudios Universitarios</h4>
+                        <span class="casa">Universidad del Aconcagua</span>
+                        <span class="fecha">2010-2013</span>
+                        <p>Título: Técnico Contable</p>
+                        <div class="conectori">
+                            <div class="circuloi"></div>
+                        </div>
+                    </div>
+                    <div class="item izq">
+                        <h4>Estudios Universitarios</h4>
+                        <span class="casa">Universidad del Aconcagua</span>
+                        <span class="fecha">2010-2015</span>
+                        <p>Título: Contador Publico</p>
+                        <div class="conectori">
+                            <div class="circuloi"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col derecha">
+                    <h3>Experiencia de trabajo</h3>
+                    <div class="item der">
+                        <h4>Auxiliar Contable</h4>
+                        <span class="casa">Estudio Las Palmas</span>
+                        <span class="fecha">2013-2015</span>
+                        <p>Elaboración y revisión de facturas, asientos contables, confección de impuestos.</p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+                    <div class="item der">
+                        <h4>Técnico Contable</h4>
+                        <span class="casa">Industrias S.A </span>
+                        <span class="fecha">2016-2019</span>
+                        <p>Gestiones bancarias, facturación y cierres fiscales, análisis contables.</p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+                    <div class="item der">
+                        <h4>Contador</h4>
+                        <span class="casa">Hotel Hyatt</span>
+                        <span class="fecha">2020-presente</span>
+                        <p>Ejecución de pagos y cobro, Gestiones en entidades financieras.</p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Seccion Contacto-->
+    <section id="contacto" class="contacto">
+        <div class="contenido-seccion">
+            <h2>Contacto</h2>
+            <div class="fila">
+                <!--formulario-->
+                <div class="col">
+                    <input type="text" placeholder="Nombre">
+                    <input type="text" placeholder="Télefono">
+                    <input type="text" placeholder="Dirección Correo">
+                    <input type="text" placeholder="Tema">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                    <button>
+                        Enviar Mensaje<i class="fa-solid fa-paper-plane"></i>
+                        <span class="overlay"></span>
+                    </button>
+
+                </div>
+                <!--Mapa-->
+                <div class="col">
+                    <img src="imagenes/ubicacion1.png" alt="">
+                    <div class="info">
+                        <ul>
+                            <li>
+                                <i class="fa-solid fa-location-dot"></i>
+                                Padre Vera 58, Maipu, Mendoza
+
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-mobile-screen"></i>
+                                261-5787962
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-envelope"></i>
+                                pedro.perez@gmail.com
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!--Footer-->
+    <footer>
+        <a href="#inicio" class="arriba">
+            <i class="fa-solid fa-angles-up"></i>
+        </a>
+        <div class="redes">
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+    </footer>
+    <script src="script.js"></script>
+
 
     
 
