Terminado Trabajo Final

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     </section>
 
-    <!--Seccion Sobre MI-->
+    <!--Sobre MI-->
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mi</h2>
@@ -121,7 +121,7 @@
 
     </div>
     </section>
-    <!--Seccion Habilidades-->
+    <!--Habilidades-->
     <section class="habilidades" id="habilidades">
         <div class="contenido-seccion">
             <h2>Habilidades</h2>
@@ -174,7 +174,7 @@
             </div>
         </div>
     </section>
-    <!--Seccion Cv-->
+    <!--Cv-->
     <section id="curriculum" class="curriculum">
         <div class="contenio-seccion">
             <h2>Curriculum</h2>
@@ -243,7 +243,7 @@
             </div>
         </div>
     </section>
-    <!--Seccion Contacto-->
+    <!--Contacto-->
     <section id="contacto" class="contacto">
         <div class="contenido-seccion">
             <h2>Contacto</h2>
